--- a/src/man/en/rpmrebuild.1.in
+++ b/src/man/en/rpmrebuild.1.in
@@ -53,10 +53,10 @@ output help information about plugins options and exit.
 \fB\-i, \-\-include\fP=<\fIfile\fP>
 read more options from the file 'file'.
 .TP 
-\fB\-I, \-\-install>
-install the created package
+\fB\-I, \-\-install\fP
+install the created package. you need to run rpmrebuild as root user.
 .TP 
-\fB\-k, \-\-keep\-perm
+\fB\-k, \-\-keep\-perm\fP
 alias to \fB\-\-pug\-from\-fs\fP
 .TP 
 \fB\-l, \-\-list\-plugin\fP
