replace duplicated postrans by pretrans

--- a/src/man/en/rpmrebuild.1.in
+++ b/src/man/en/rpmrebuild.1.in
@@ -184,7 +184,7 @@ Invoke plugin or editor to change specfile.
 .LP 
 \fB\-\-change\-spec\-pretrans\fP=<\fIcommand\fP>
 .br 
-\fB\-\-edit\-postrans
+\fB\-\-edit\-pretrans
 .LP 
 \fB\-\-change\-spec\-postrans\fP=<\fIcommand\fP>
 .br 
