--- a/src/plugins/man/fr_FR.UTF-8/unset_tag.plug.1rrp.in
+++ b/src/plugins/man/fr_FR.UTF-8/unset_tag.plug.1rrp.in
@@ -73,7 +73,7 @@ Consultez le fichier COPYING pour plus de détails.
 .LP
 rpm(8), rpmbuild(8), rpmrebuild_plugins(1)
 .br
-compat_digest.plug(1), demo.plug(1), demofiles.plug(1),  nodoc.plug(1), uniq.plug(1), file2pacDep.plug(1) exclude_file.plug(1) un_prelink.plug(1) set_tag.plug(1)
-unset_tag.plug(1)
+compat_digest.plug(1), demo.plug(1), demofiles.plug(1), nodoc.plug(1), uniq.plug(1), file2pacDep.plug(1), exclude_file.plug(1), un_prelink.plug(1)
+set_tag.plug(1), unset_tag.plug(1)
 .br
 man \-k rrp for plugins specific manpages
