--- a/src/optional_tags.cfg
+++ b/src/optional_tags.cfg
@@ -33,3 +33,7 @@ SUPPLEMENTVERSION d_line
 # only in rpm 5
 TRIGGERCONDS d_word
 TRIGGERTYPE d_word
+
+FILETRIGGERCONDS d_line
+TRANSFILETRIGGERCONDS d_line
+
